[0, 15, 78]: 2018-11-15
  - fix setup issue for 3.8 (reported by `Sidney Kuyateh 
    <https://bitbucket.org/autinerd/>`__)

[0, 15, 77]: 2018-11-09
  - setting `yaml.sort_base_mapping_type_on_output = False`, will prevent
    explicit sorting by keys in the base representer of mappings. Roundtrip
    already did not do this. Usage only makes real sense for Python 3.6+
    (feature request by `Sebastian Gerber <https://bitbucket.org/spacemanspiff2007/>`__).
  - implement Python version check in YAML metadata in ``_test/test_z_data.py``

[0, 15, 76]: 2018-11-01
  - fix issue with empty mapping and sequence loaded as flow-style
    (mapping reported by `Min RK <https://bitbucket.org/minrk/>`__, sequence
    by `Maged Ahmed <https://bitbucket.org/maged2/>`__)

[0, 15, 75]: 2018-10-27
  - fix issue with single '?' scalar (reported by `Terrance 
    <https://bitbucket.org/OllieTerrance/>`__)
  - fix issue with duplicate merge keys (prompted by `answering 
    <https://stackoverflow.com/a/52852106/1307905>`__ a 
    `StackOverflow question <https://stackoverflow.com/q/52851168/1307905>`__
    by `math <https://stackoverflow.com/users/1355634/math>`__)

[0, 15, 75]: 2018-10-27
  - fix issue with single '?' scalar (reported by `Terrance 
    <https://bitbucket.org/OllieTerrance/>`__)
  - fix issue with duplicate merge keys (prompted by `answering 
    <https://stackoverflow.com/a/52852106/1307905>`__ a 
    `StackOverflow question <https://stackoverflow.com/q/52851168/1307905>`__
    by `math <https://stackoverflow.com/users/1355634/math>`__)

[0, 15, 74]: 2018-10-17
  - fix dropping of comment on rt before sequence item that is sequence item
    (reported by `Thorsten Kampe <https://bitbucket.org/thorstenkampe/>`__)

[0, 15, 73]: 2018-10-16
  - fix irregular output on pre-comment in sequence within sequence (reported
    by `Thorsten Kampe <https://bitbucket.org/thorstenkampe/>`__)
  - allow non-compact (i.e. next line) dumping sequence/mapping within sequence.
