@@ -1,3 +1,11 @@
+[0, 15, 79]: 2018-11-21
+  - fix issue with anchors nested deeper than alias (reported by gaFF on
+    `StackOverflow <https://stackoverflow.com/a/53397781/1307905>`__)
+
+[0, 15, 79]: 2018-11-21
+  - fix issue with anchors nested deeper than alias (reported by gaFF on
+    `StackOverflow <https://stackoverflow.com/a/53397781/1307905>`__)
+
 [0, 15, 78]: 2018-11-15
   - fix setup issue for 3.8 (reported by `Sidney Kuyateh 
     <https://bitbucket.org/autinerd/>`__)
